default/objects/Account_Plan_Opportunity__c/Account_Plan_Opportunity__c.object-meta.xml
<CustomObject>
    <label>Account Plan Opportunity</label>
    <nameField>
        <displayFormat>APO-{0000}</displayFormat>
        <label>Account Plan Opportunity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Plan Opportunities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>