default/objects/Account_Plan_Opportunity__c/fields/Account_Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan_Name__c</fullName>
    <formula>Account_Plan__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Plan Name</label>
    <type>Text</type>
</CustomField>