default/objects/Account_Plan_Opportunity__c/validationRules/Lock_Opportunity.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Opportunity</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Opportunity__c)),
  ISCHANGED(Opportunity__c)
)</errorConditionFormula>
    <errorMessage>The Opportunity cannot change values.</errorMessage>
</ValidationRule>