default/objects/Account_Plan_Opportunity__c/validationRules/Matching_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Matching_Account</fullName>
    <active>false</active>
    <errorConditionFormula>Account_Plan__r.Account__c !=  Opportunity__r.AccountId</errorConditionFormula>
    <errorMessage>Account must match on Account Plan and Opportunity</errorMessage>
</ValidationRule>